re-sync with local version

--- a/templates/gridenv-site.sh.erb
+++ b/templates/gridenv-site.sh.erb
@@ -1,13 +1,13 @@
 # set site parameters. 
-    gridenv_set         "SRM_PATH" "<%=srm_path%>"
-    gridenv_set         "SITE_NAME" "<%=site_name%>"
-    gridenv_set         "MYPROXY_SERVER" "<%=myproxy_server%>"
-    gridenv_set         "LCG_LOCATION" "<%=lcg_location%>"
-    gridenv_set         "LCG_GFAL_INFOSYS" "<%=lcg_gfal_infosys%>"
-    gridenv_set         "GT_PROXY_MODE" "<%=gt_proxy_mode%>"
-    gridenv_set         "GRID_ENV_LOCATION" "<%=grid_env_location%>"
-    gridenv_set         "GRIDMAPDIR" "<%=gridmapdir%>"
-    gridenv_set         "GLITE_LOCATION_VAR" "<%=glite_location_var%>"
-    gridenv_set         "GLITE_LOCATION" "<%=glite_location%>"
-    gridenv_set         "GLITE_ENV_SET" "<%=glite_env_set%>"
-    gridenv_set         "GLEXEC_LOCATION" "<%=glexec_location%>"
+    gridenv_set         "SRM_PATH" "<%=@srm_path%>"
+    gridenv_set         "SITE_NAME" "<%=@site_name%>"
+    gridenv_set         "MYPROXY_SERVER" "<%=@myproxy_server%>"
+    gridenv_set         "LCG_LOCATION" "<%=@lcg_location%>"
+    gridenv_set         "LCG_GFAL_INFOSYS" "<%=@lcg_gfal_infosys%>"
+    gridenv_set         "GT_PROXY_MODE" "<%=@gt_proxy_mode%>"
+    gridenv_set         "GRID_ENV_LOCATION" "<%=@grid_env_location%>"
+    gridenv_set         "GRIDMAPDIR" "<%=@gridmapdir%>"
+    gridenv_set         "GLITE_LOCATION_VAR" "<%=@glite_location_var%>"
+    gridenv_set         "GLITE_LOCATION" "<%=@glite_location%>"
+    gridenv_set         "GLITE_ENV_SET" "<%=@glite_env_set%>"
+    gridenv_set         "GLEXEC_LOCATION" "<%=@glexec_location%>"
