--- a/templates/glexec.conf.erb
+++ b/templates/glexec.conf.erb
@@ -4,7 +4,7 @@
 [glexec]
 silent_logging               = no
 log_level                    = 3
-user_white_list              = <%=user_white_list%>
+user_white_list              = <%=@user_white_list%>
 linger                       = yes
 user_identity_switch_by      = glexec
 use_lcas                     = no
