changed logging from syslog to explicit file

--- a/templates/glexec.conf.erb
+++ b/templates/glexec.conf.erb
@@ -20,4 +20,4 @@ lcas_log_file                = /var/log/glexec/lcas_lcmaps.log
 lcas_debug_level             = 1
 lcas_log_level               = 1
 preserve_env_variables       = no
-log_destination              = syslog
+log_destination              = file
